--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/
 <li><a href="https://ncode.syosetu.com/n9098ih/">「勇者と先輩」</a> –
 第21部分　（第一部　第二章「九、青い部屋の猫」(2023/07/10)）関連</li>
 </ul>
-<li >-[<a href="https://ncode.syosetu.com/n9561ih/">青い部屋の誓い（戦士桑田の泥臭い青春）</a>
+<li ><a href="https://ncode.syosetu.com/n9561ih/">青い部屋の誓い（戦士桑田の泥臭い青春）</a>
 – 第22部分「一一、テカテカキラキラギラギラ」（2023/07/11）関連）</li>
 <h1 id="第三章20230716-更新">第三章（2023/07/16～　更新）</h1>
 <p><a
