--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/
 </ul>
 <h1 id="第三章20230716-更新">第三章（2023/07/16～　更新）</h1>
 <p><a
-href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行
+href="https://ncode.syosetu.com/n1100ih/24/">【第一部　第三章　勇者一行
 一、召喚された異世界で鈴木は　】</a></p>
 <h2 id="第三章登場人物"><a
 href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第三章登場人物</a></h2>
