--- a/index.html
+++ b/index.html
@@ -156,9 +156,8 @@ href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/
 <ul>
 <li>2023年 07月09日(日) 03時14分活動報告</li>
 </ul>
-<hr>
-<h1
-id="第四章準備中20230726-更新予定">第四章（準備中2023/07/26～　更新予定）</h1>
+<hr />
+<h1 id="第四章準備中20230726-更新予定">第四章（準備中2023/07/26～　更新予定）</h1>
 <ul>
 <li><a
 href="【準備中】">第一部　第四章　【準備中】　一、【準備中】</a></li>
