--- a/index.html
+++ b/index.html
@@ -72,112 +72,146 @@ ul li, ol li {
 
 <!--2023-07-25-->
 <body>
-<h1 id="序章">序章　</h1>
-<p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX</a></p>
-<h1
-id="第一部-第一章20230626-更新">第一部　第一章（2023/06/26～　更新）</h1>
+<div class="github-markdown-content"><p>2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
+<!-- omit in toc -->
+<h1 id="目次">目次</h1>
 <ul>
-<li><a
-href="https://ncode.syosetu.com/n1100ih/2/">一部　第一章　ハロウィンの不条理　一
-、白い部屋のふたり</a></li>
+<li><a href="#%E5%BA%8F%E7%AB%A0">序章　</a></li>
+<li><a href="#%E7%AC%AC%E4%B8%80%E9%83%A8%E7%AC%AC%E4%B8%80%E7%AB%A020230626%E6%9B%B4%E6%96%B0">第一部　第一章（2023/06/26～　更新）</a>
+<ul>
+<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%80%E7%AB%A0">登場人物・用語　第一章</a></li>
+<li><a href="#%E7%AC%AC%E4%B8%80%E7%AB%A0%E3%81%AE%E3%83%8D%E3%82%BF%E3%83%90%E3%83%AC%E3%81%82%E3%82%89%E3%81%99%E3%81%98">第一章のネタバレあらすじ</a></li>
 </ul>
-<h2 id="登場人物用語-第一話"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第一話</a></h2>
+</li>
+<li><a href="#%E7%95%AA%E5%A4%96%E7%B7%A8%E7%AC%AC%E4%B8%80%E7%AB%A0%E5%BE%8C">番外編（第一章後）</a></li>
+<li><a href="#%E7%AC%AC%E4%BA%8C%E7%AB%A02023-07-09%E6%9B%B4%E6%96%B0">第二章（2023-07-09～　更新）</a>
+<ul>
+<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E4%BB%96%E7%AC%AC%E4%BA%8C%E7%AB%A0">登場人物他　第二章</a></li>
+<li><a href="#%E3%81%82%E3%82%89%E3%81%99%E3%81%98%E7%AC%AC%E4%BA%8C%E7%AB%A0">あらすじ　第二章</a></li>
+</ul>
+</li>
+<li><a href="#%E7%95%AA%E5%A4%96%E7%B7%A8%E7%AC%AC%E4%BA%8C%E7%AB%A0%E5%BE%8C">番外編（第二章後）</a></li>
+<li><a href="#%E7%AC%AC%E4%B8%89%E7%AB%A020230716%E6%9B%B4%E6%96%B0">第三章（2023/07/16～　更新）</a>
+<ul>
+<li><a href="#%E7%AC%AC%E4%B8%89%E7%AB%A0%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9">第三章登場人物</a></li>
+<li><a href="#%E3%81%82%E3%82%89%E3%81%99%E3%81%98">あらすじ</a></li>
+<li><a href="#%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%89%E4%BA%94%E7%AB%A0">用語　第三－五章</a></li>
+</ul>
+</li>
+<li><a href="#%E7%AC%AC%E5%9B%9B%E7%AB%A020230726%E6%9B%B4%E6%96%B0%E4%B8%AD">第四章（2023/07/26～　更新中）</a>
+<ul>
+<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%89%E4%BA%94%E7%AB%A0">登場人物・用語　第三－五章</a></li>
+</ul>
+</li>
+<li><a href="#%E7%AC%AC%E4%BA%94%E7%AB%A0%E6%BA%96%E5%82%99%E4%B8%AD">第五章（準備中）</a></li>
+<li><a href="#%E7%AC%AC%E5%85%AD%E7%AB%A0%E6%BA%96%E5%82%99%E4%B8%AD">第六章（準備中）</a></li>
+</ul>
+<p>2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
+<h1 id="序章">序章</h1>
+<p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX</a></p>
+<h1 id="第一部第一章20230626更新">第一部　第一章（2023/06/26～　更新）</h1>
+<ul>
+<li><a href="https://ncode.syosetu.com/n1100ih/2/">第一部　第一章　ハロウィンの不条理　一 、白い部屋のふたり</a></li>
+</ul>
+<h2 id="登場人物用語第一章"><a href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第一章</a></h2>
 <ul>
 <li>2023年 06月23日(金) 22時06分 活動報告</li>
+<li>登場人物
+<ul>
+<li>鈴木：主人公。女性。連邦凪海浦大学４年生。</li>
+<li>鮎田：鈴木の同級生、男性。</li>
+<li>高橋：男性。媒質器具職人。鈴木の先輩。</li>
+<li>桑田：鈴木の同級生。男性。</li>
+<li>烏池：鈴木の同級生、女性、</li>
+<li>白い部屋の主：</li>
+<li>鈴木の両親：故人</li>
 </ul>
-<h2 id="第一章のネタバレあらすじ"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">第一章のネタバレあらすじ</a></h2>
+</li>
+<li>用語
+　-　ハロウィンの日付　2075（西暦）年10月30日(木)
+　-　二一世紀連邦:鈴木たちの凪海浦大学がある国。2044年成立。
+　-　「超現象研究Ａ」:凪海浦大学の教養課程必修科目。
+　-　超現象は、2035年に発見された画期的な技術のこと</li>
+</ul>
+<h2 id="第一章のネタバレあらすじ"><a href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">第一章のネタバレあらすじ</a></h2>
 <ul>
 <li>2023年 06月27日(火) 08時42分 活動報告</li>
 </ul>
 <h1 id="番外編第一章後">番外編（第一章後）</h1>
 <ul>
-<li><p><a
-href="https://ncode.syosetu.com/n3625ih/">溺愛体質女子大生は、親友の恋を応援しつつ、ダーリンを褒め続け、２２世紀まで添い遂げる</a></p>
+<li><a href="https://ncode.syosetu.com/n3625ih/">【短編】溺愛体質女子大生は、親友の恋を応援しつつ、ダーリンを褒め続け、２２世紀まで添い遂げる</a>
 <ul>
 <li>2023年 06月30日 07時11分</li>
-</ul></li>
 </ul>
-<h1 id="第二章2023-07-09-更新">第二章（2023-07-09～　更新）</h1>
-<ul>
-<li><a
-href="https://ncode.syosetu.com/n1100ih/12/">第一部　第二章　学びと仕事　一、自分だけの輝き</a></li>
+</li>
 </ul>
-<h2 id="登場人物他">登場人物他</h2>
+<h1 id="第二章2023-07-09更新">第二章（2023-07-09～　更新）</h1>
 <ul>
-<li><p><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第二章</a></p>
+<li><a href="https://ncode.syosetu.com/n1100ih/12/">第一部　第二章　学びと仕事　一、自分だけの輝き</a></li>
+</ul>
+<h2 id="登場人物他第二章">登場人物他　第二章</h2>
+<ul>
+<li><a href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第二章</a>
 <ul>
 <li>2023年 06月23日(金) 22時06分 活動報告</li>
-</ul></li>
 </ul>
-<h2 id="あらすじ">あらすじ</h2>
+</li>
+</ul>
+<h2 id="あらすじ第二章">あらすじ　第二章</h2>
 <ul>
-<li><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第二章のネタバレあらすじ</a></li>
+<li><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第二章のネタバレあらすじ</a>
+<ul>
+<li>2023年 07月09日 (日) 03:14</li>
+</ul>
+</li>
 </ul>
 <h1 id="番外編第二章後">番外編（第二章後）</h1>
 <ul>
-<li><p><a
-href="https://ncode.syosetu.com/n9098ih/">「勇者と先輩」</a></p>
+<li>
+<p><a href="https://ncode.syosetu.com/n9098ih/">【短編】「勇者と先輩」</a></p>
 <ul>
-<li>第21部分　（第一部　第二章「九、青い部屋の猫」(2023/07/10)）関連</li>
-</ul></li>
-<li><p><a
-href="https://ncode.syosetu.com/n9561ih/">「青い部屋の誓い（戦士桑田の泥臭い青春）」</a></p>
-<ul>
-<li>第22部分「一一、テカテカキラキラギラギラ」（2023/07/11）関連）</li>
-</ul></li>
+<li>第21部分　第一部　第二章「九、青い部屋の猫」(2023/07/10)関連</li>
 </ul>
-<h1 id="第三章20230716-更新">第三章（2023/07/16～　更新）</h1>
-<ul><li><a
-href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行
-一、召喚された異世界で鈴木は</a></li></ul>
-<h2 id="第三章登場人物"><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第三章登場人物</a></h2>
+</li>
+<li>
+<p><a href="https://ncode.syosetu.com/n9561ih/">【短編】「青い部屋の誓い（戦士桑田の泥臭い青春）」</a></p>
 <ul>
-<li><p>2023年 07月09日(日) 03時14分活動報告</p>
-<ul>
-<li><p>異世界のひとたち</p></li>
-<li><p>日本地方・亜空間の諸氏</p></li>
-</ul></li>
+<li>第22部分　第一部　第二章「一一、テカテカキラキラギラギラ」（2023/07/11）関連</li>
 </ul>
-<h2 id="あらすじ-1">あらすじ</h2>
-<ul>
-<li><p><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第三章のネタバレあらすじ</a></p>
-<ul>
-<li>2023年 07月22日(土) 13時20分活動報告</li>
-</ul></li>
+</li>
 </ul>
-<h2 id="用語-第三五章"><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">用語　第三－五章</a></h2>
+<h1 id="第三章20230716更新">第三章（2023/07/16～　更新）</h1>
+<p><a href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行 一、召喚された異世界で鈴木は</a></p>
+<h2 id="第三章登場人物"><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第三章登場人物</a></h2>
 <ul>
 <li>2023年 07月09日(日) 03時14分活動報告</li>
 </ul>
-<hr />
-<h1 id="第四章準備中20230726-更新予定">第四章（準備中2023/07/26～　更新予定）</h1>
+<h2 id="あらすじ">あらすじ</h2>
 <ul>
-<li><a
-href="【準備中】">第一部　第四章　【準備中】　一、【準備中】</a></li>
-</ul>
-<h2 id="登場人物用語-第三五章">[登場人物・用語　第三－五章]</h2>
+<li><a href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第三章のネタバレあらすじ</a>
 <ul>
-<li>(準備中)</li>
+<li>2023年 07月22日(土) 13時20分活動報告</li>
 </ul>
+</li>
+</ul>
+<h2 id="用語第三五章"><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">用語　第三－五章</a></h2>
+<ul>
+<li>2023年 07月09日(日) 03時14分活動報告</li>
+</ul>
+<h1 id="第四章20230726更新中">第四章（2023/07/26～　更新中）</h1>
+<ul>
+<li><a href="https://ncode.syosetu.com/n1100ih/35/">第一部　第四章　美　一、美青年高橋、白い部屋のタスクに勤しむ</a></li>
+</ul>
+<h2 id="登場人物用語第三五章"><a href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">登場人物・用語　第三－五章</a></h2>
+<ul>
+<li>2023年 07月22日(土) 13時20分</li>
+</ul>
+<p>◆───────◆（未投稿　準備中）◆───────◆</p>
 <h1 id="第五章準備中">第五章（準備中）</h1>
-<ul>
-<li><a
-href="【準備中】">第一部　第五章　【準備中】　一、【準備中】</a></li>
-</ul>
-<h2 id="登場人物あらすじ">登場人物・あらすじ</h2>
 <h1 id="第六章準備中">第六章（準備中）</h1>
-<ul>
-<li><a
-href="【準備中】">第一部　第三章　【準備中】　一、【準備中】</a></li>
-</ul>
-<h1 id="第二部-第一章準備中">第二部　第一章（準備中）</h1>
-<p>2023-07-26　21:31</p>
-</body>
-</html>
+</div>
+        </div>
+        
+        
+    </body>
+    </html>
