--- a/index.html
+++ b/index.html
@@ -13,43 +13,44 @@
   <![endif]-->
 </head>
 
-<!--2023-07-25-->
+<!--2023-07-29-->
 <body>
-<p>2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
+<p style="text-align:right;">2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
 <!-- omit in toc -->
 <h1 id="目次">目次</h1>
 <ul>
-<li><a href="#%E5%BA%8F%E7%AB%A0">序章　</a></li>
-<li><a href="#%E7%AC%AC%E4%B8%80%E9%83%A8%E7%AC%AC%E4%B8%80%E7%AB%A020230626%E6%9B%B4%E6%96%B0">第一部　第一章（2023/06/26～　更新）</a>
+<li>>序章　</a></li>
+<li>第一部　第一章（2023/06/26～　更新）</a>
 <ul>
-<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%80%E7%AB%A0">登場人物・用語　第一章</a></li>
-<li><a href="#%E7%AC%AC%E4%B8%80%E7%AB%A0%E3%81%AE%E3%83%8D%E3%82%BF%E3%83%90%E3%83%AC%E3%81%82%E3%82%89%E3%81%99%E3%81%98">第一章のネタバレあらすじ</a></li>
+<li>登場人物・用語　第一章</a></li>
+<li>第一章のネタバレあらすじ</a></li>
 </ul>
 </li>
-<li><a href="#%E7%95%AA%E5%A4%96%E7%B7%A8%E7%AC%AC%E4%B8%80%E7%AB%A0%E5%BE%8C">番外編（第一章後）</a></li>
-<li><a href="#%E7%AC%AC%E4%BA%8C%E7%AB%A02023-07-09%E6%9B%B4%E6%96%B0">第二章（2023-07-09～　更新）</a>
+<li>番外編（第一章後）</a></li>
+<li>第二章（2023-07-09～　更新）</a></li>
 <ul>
-<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E4%BB%96%E7%AC%AC%E4%BA%8C%E7%AB%A0">登場人物他　第二章</a></li>
-<li><a href="#%E3%81%82%E3%82%89%E3%81%99%E3%81%98%E7%AC%AC%E4%BA%8C%E7%AB%A0">あらすじ　第二章</a></li>
+<li>登場人物他　第二章</a></li>
+<li>あらすじ　第二章</a></li>
 </ul>
 </li>
-<li><a href="#%E7%95%AA%E5%A4%96%E7%B7%A8%E7%AC%AC%E4%BA%8C%E7%AB%A0%E5%BE%8C">番外編（第二章後）</a></li>
-<li><a href="#%E7%AC%AC%E4%B8%89%E7%AB%A020230716%E6%9B%B4%E6%96%B0">第三章（2023/07/16～　更新）</a>
+<li>番外編（第二章後）</a></li>
+<li>第三章（2023/07/16～　更新）</a>
 <ul>
-<li><a href="#%E7%AC%AC%E4%B8%89%E7%AB%A0%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9">第三章登場人物</a></li>
-<li><a href="#%E3%81%82%E3%82%89%E3%81%99%E3%81%98">あらすじ</a></li>
-<li><a href="#%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%89%E4%BA%94%E7%AB%A0">用語　第三－五章</a></li>
+<li>第三章登場人物</a></li>
+<li>あらすじ</a></li>
+<li>用語　第三－五章</a></li>
 </ul>
 </li>
-<li><a href="#%E7%AC%AC%E5%9B%9B%E7%AB%A020230726%E6%9B%B4%E6%96%B0%E4%B8%AD">第四章（2023/07/26～　更新中）</a>
+<li>第四章（2023/07/26～　更新中）</a>
 <ul>
-<li><a href="#%E7%99%BB%E5%A0%B4%E4%BA%BA%E7%89%A9%E7%94%A8%E8%AA%9E%E7%AC%AC%E4%B8%89%E4%BA%94%E7%AB%A0">登場人物・用語　第三－五章</a></li>
+<li>登場人物・用語　第三－五章</a></li>
 </ul>
 </li>
-<li><a href="#%E7%AC%AC%E4%BA%94%E7%AB%A0%E6%BA%96%E5%82%99%E4%B8%AD">第五章（準備中）</a></li>
-<li><a href="#%E7%AC%AC%E5%85%AD%E7%AB%A0%E6%BA%96%E5%82%99%E4%B8%AD">第六章（準備中）</a></li>
+<li>第五章（準備中）</a></li>
+<li>第六章（準備中）</a></li>
 </ul>
 <p>2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
+<h1 id="序章">序章</h1><p>2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
 <h1 id="序章">序章</h1>
 <p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX</a></p>
 <h1 id="第一部第一章20230626更新">第一部　第一章（2023/06/26～　更新）</h1>
