--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   <!--本文ここから-->
 <div style="line-height:1.5;"><!--行間-->
 <!-- 更新記録 --><p style="text-align:right;">2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
-
+<p>2023-07-30　URLの訂正をしました。</p>
 <!-- omit in toc --><h1 id="序章">序章</h1>
 <p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX（なろう）</a>
   <a href="https://ichimonjiruru.github.io/2023/">INDEX（HTML版）</a></p>
+
+  <!-- ここから貼り付ける　序章のダブりを削除　-->
+
+
 <h1 id="第一部第一章20230626更新">第一部　第一章（2023/06/26～　更新）</h1>
 <ul>
 <li><a href="https://ncode.syosetu.com/n1100ih/2/">第一部　第一章　ハロウィンの不条理　一 、白い部屋のふたり</a></li>
 </ul>
+<p>◆───────────────◆◆───────────────◆</p>
 <h2 id="登場人物用語第一章"><a href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第一章</a></h2>
 <ul>
 <li>2023年 06月23日(金) 22時06分 活動報告</li>
@@ -37,15 +42,15 @@
 </ul>
 </li>
 <li>用語
-  <!-- ここはこのまま？ -->
 　-　ハロウィンの日付　2075（西暦）年10月30日(木)
 　-　二一世紀連邦:鈴木たちの凪海浦大学がある国。2044年成立。
 　-　「超現象研究Ａ」:凪海浦大学の教養課程必修科目。
 　-　超現象は、2035年に発見された画期的な技術のこと</li>
 </ul>
+<p>◆───────────────◆◆───────────────◆</p>
 <h2 id="第一章のネタバレあらすじ"><a href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">第一章のネタバレあらすじ</a></h2>
 <ul>
-<li>2023年 06月27日(火) 08時42分 活動報告</li>
+<li>2023年 06月27日(火) 08時42分 活動報告(/blogkey/3168898/)</li>
 </ul>
 <h1 id="番外編第一章後">番外編（第一章後）</h1>
 <ul>
@@ -61,9 +66,9 @@
 </ul>
 <h2 id="登場人物他第二章">登場人物他　第二章</h2>
 <ul>
-<li><a href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第二章</a>
+<li><a href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">登場人物・用語　第二章</a>
 <ul>
-<li>2023年 06月23日(金) 22時06分 活動報告</li>
+<li>2023年 06月27日(火) 08時42分 活動報告(/blogkey/3168898/)</li>
 </ul>
 </li>
 </ul>
@@ -71,7 +76,7 @@
 <ul>
 <li><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第二章のネタバレあらすじ</a>
 <ul>
-<li>2023年 07月09日 (日) 03:14</li>
+<li>2023年 07月09日(日) 03時14分活動報告(/blogkey/3173819/))</li>
 </ul>
 </li>
 </ul>
@@ -91,72 +96,43 @@
 </li>
 </ul>
 <h1 id="第三章20230716更新">第三章（2023/07/16～　更新）</h1>
-<p><a href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行 一、召喚された異世界で鈴木は</a></p>
+<ul>
+<li><a href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行 一、召喚された異世界で鈴木は</a></li>
+</ul>
 <h2 id="第三章登場人物"><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第三章登場人物</a></h2>
 <ul>
-<li>2023年 07月09日(日) 03時14分活動報告</li>
+<li>2023年 07月09日(日) 03時14分活動報告(/blogkey/3173819/))</li>
 </ul>
 <h2 id="あらすじ">あらすじ</h2>
 <ul>
 <li><a href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第三章のネタバレあらすじ</a>
 <ul>
-<li>2023年 07月22日(土) 13時20分活動報告</li>
+<li>2023年 07月22日(土) 13時20分活動報告(blogkey/3179219/)</li>
 </ul>
 </li>
 </ul>
 <h2 id="用語第三五章"><a href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">用語　第三－五章</a></h2>
 <ul>
-<li>2023年 07月09日(日) 03時14分活動報告</li>
+<li>2023年 07月09日(日) 03時14分活動報告(blogkey/3173819/))</li>
 </ul>
 <h1 id="第四章20230726更新中">第四章（2023/07/26～　更新中）</h1>
 <ul>
 <li><a href="https://ncode.syosetu.com/n1100ih/35/">第一部　第四章　美　一、美青年高橋、白い部屋のタスクに勤しむ</a></li>
+<li></li>
 </ul>
-<h2 id="登場人物用語第三五章"><a href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">登場人物・用語　第三－五章</a></h2>
+<h2 id="第四章登場人物"><a href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第四章登場人物</a></h2>
 <ul>
-<li>2023年 07月22日(土) 13時20分</li>
+<li>2023年 07月22日(土) 13時20分活動報告（blogkey/3179219/）</li>
 </ul>
-
-  <!--  -->
-<p>◆───────◆（未投稿　準備中）◆───────◆</p>
 <h1 id="第五章準備中">第五章（準備中）</h1>
 <h1 id="第六章準備中">第六章（準備中）</h1>
-</div>
-<hr>
-  <!-- リンクをつけるとアンカーが煩雑なのでリストだけ -->
-<h1 id="目次">一覧（リンクなし）</h1>
-<ul>
+<p>◆───────◆（未投稿　準備中）◆───────◆</p>
+<h1 id="第五章準備中-1">第五章（準備中）</h1>
+<h1 id="登場人物用語第三五章"><a href="https://syosetu.com/userblogmanage/updateinput/blogkey/3182246/">登場人物・用語　第三－五章</a></h1>
+<h1 id="第六章準備中-1">第六章（準備中）</h1>
+<!--\N100IH\page1230729.md--></div>
+        </div>
 
-<li>序章　</li>
-<li>第一部　第一章（2023/06/26～　更新）
-<ul>
-<li>登場人物・用語　第一章</li>
-<li>第一章のネタバレあらすじ</li>
-</ul>
-</li>
-<li>番外編（第一章後）</li>
-<li>第二章（2023-07-09～　更新）
-<ul>
-<li>登場人物他　第二章</li>
-<li>あらすじ　第二章</li>
-</ul>
-</li>
-<li>番外編（第二章後）</li>
-<li>第三章（2023/07/16～　更新）
-<ul>
-<li>第三章登場人物</li>
-<li>あらすじ</li>
-<li>用語　第三－五章</li>
-</ul>
-</li>
-<li>第四章（2023/07/26～　更新中）
-<ul>
-<li>登場人物・用語　第三－五章</li>
-</ul>
-</li>
-<li>第五章（準備中）</li>
-<li>第六章（準備中）</li>
-</ul>
 
-    </body>
+</body>
     </html>
