--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!--本文ここから-->
 <div style="line-height:1.5;"><!--行間-->
 <!-- 更新記録 --><p style="text-align:right;">2023-07-29　第一章のみ登場人物・用語の簡易版をつけました。</p>
-<p>2023-07-30　URLの訂正をしました。</p>
+<p style="text-align:right;">2023-07-30　URLの訂正をしました。</p>
 <!-- omit in toc --><h1 id="序章">序章</h1>
 <p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX（なろう）</a>
   <a href="https://ichimonjiruru.github.io/2023/">INDEX（HTML版）</a></p>
@@ -128,11 +128,8 @@
 <h1 id="第六章準備中">第六章（準備中）</h1>
 <p>◆───────◆（未投稿　準備中）◆───────◆</p>
 <h1 id="第五章準備中-1">第五章（準備中）</h1>
-<h1 id="登場人物用語第三五章"><a href="https://syosetu.com/userblogmanage/updateinput/blogkey/3182246/">登場人物・用語　第三－五章</a></h1>
+<h1 id="登場人物用語第三五章"><!-- <a href="https://syosetu.com/userblogmanage/updateinput/blogkey/3182246/">登場人物・用語　第三－五章</a>--></h1>
 <h1 id="第六章準備中-1">第六章（準備中）</h1>
 <!--\N100IH\page1230729.md--></div>
-       
-
-
 </body>
     </html>
