--- a/index.html
+++ b/index.html
@@ -11,164 +11,25 @@
   <![endif]-->
 </head>
 <body>
-  <!--本文ここから-->
-<div style="line-height:1.5;"><!--行間-->
-<!-- 更新記録 -->
-<!-- この下から第一話に貼り付ける -->
-<p>2023-08-06</p>
-<h1 id="序章">序章　</h1>
-<p><a href="https://ncode.syosetu.com/n1100ih/1/">INDEX</a></p>
-<h1
-id="第一部-第一章20230626-更新">第一部　第一章（2023/06/26～　更新）</h1>
+<p style="text-align: right;">2023-08-11　更新</p>
+<h1 id="イチモンジルルのさくいん">イチモンジ・ルルのさくいん</h1>
+<h2 id="小説家になろう-投稿">小説家になろう　投稿</h2>
 <ul>
 <li><a
-href="https://ncode.syosetu.com/n1100ih/2/">第一部　第一章　ハロウィンの不条理　一
-、白い部屋のふたり</a></li>
+href="https://ncode.syosetu.com/n1100ih/">連載小説「【8/12完結】わきまえ女子大生戦士は同級生勇者とかぼちゃを食べる～尽くし続けた私を理不尽な罠にはめたのは初恋の彼でした。尊敬しあえる仲間と共闘して溺愛され、家族になります」</a></li>
+<li>「<a
+href="https://ncode.syosetu.com/s4817h/">「わきまえかぼちゃ」シリーズ</a></li>
+<li><a
+href="https://ncode.syosetu.com/n5962ih/">エッセイ「辞書とwebツールが大好きな「読者」兼初心者web小説「作者」の覚書（第五十二段リスペクト）」</a></li>
 </ul>
-<p>◆───────────────◆◆───────────────◆</p>
-<h2 id="登場人物用語-第一章"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3167519/">登場人物・用語　第一章</a></h2>
-<ul>
-<li>2023年 06月23日(金) 22時06分 活動報告</li>
-<li>登場人物
-<ul>
-<li>鈴木：主人公。女性。連邦凪海浦大学４年生。</li>
-<li>鮎田：鈴木の同級生、男性。</li>
-<li>高橋：男性。媒質器具職人。鈴木の先輩。</li>
-<li>桑田：鈴木の同級生。男性。</li>
-<li>烏池：鈴木の同級生、女性。</li>
-<li>白い部屋の主：</li>
-<li>鈴木の両親：故人</li>
-</ul></li>
-<h3>用語</h3>
-<ul>
-<li>ハロウィンの日付　2075（西暦）年10月30日(木)</li>
-<li>二一世紀連邦:鈴木たちの凪海浦大学がある国。2044年成立。</li>
-<li>「超現象研究Ａ」:凪海浦大学の教養課程必修科目。</li>
-<li>超現象は、2035年に発見された画期的な技術のこと</li>
-</ul></li>
-</ul>
-<p>◆───────────────◆◆───────────────◆</p>
-<h2 id="第一章のネタバレあらすじ"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">第一章のネタバレあらすじ</a></h2>
-<ul>
-<li>2023年 06月27日(火) 08時42分 活動報告(/blogkey/3168898/)</li>
-</ul>
-<h1 id="番外編第一章後">番外編（第一章後）</h1>
+<h2 id="そのほかいろいろ">そのほかいろいろ</h2>
 <ul>
 <li><a
-href="https://ncode.syosetu.com/n3625ih/">【短編】溺愛体質女子大生は、親友の恋を応援しつつ、ダーリンを褒め続け、２２世紀まで添い遂げる</a>
-<ul>
-<li>2023年 06月30日 07時11分</li>
-</ul></li>
+href="https://ichimonjiruru.github.io/2023/n1100ih.html">わきまえかぼちゃ第一部index（HTML版）</a></li>
+<li>このページ<a href="https://ichimonjiruru.github.io/2023/"> - index（HTML版）</a></li>
+<li><a href="https://ichimonjiruru.github.io/2023/">Beacons</a></li>
 </ul>
-<h1 id="第二章2023-07-09">第二章（2023-07-09～）</h1>
-<ul>
-<li><a
-href="https://ncode.syosetu.com/n1100ih/12/">第一部　第二章　学びと仕事　一、自分だけの輝き</a></li>
-</ul>
-<h2 id="登場人物他-第二章">登場人物他　第二章</h2>
-<ul>
-<li><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3168898/">登場人物・用語　第二章</a>
-<ul>
-<li>2023年 06月27日(火) 08時42分 活動報告(/blogkey/3168898/)</li>
-</ul></li>
-</ul>
-<h2 id="あらすじ-第二章">あらすじ　第二章</h2>
-<ul>
-<li><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第二章のネタバレあらすじ</a>
-<ul>
-<li>2023年 07月09日(日) 03時14分活動報告(/blogkey/3173819/))</li>
-</ul></li>
-</ul>
-<h1 id="番外編第二章後">番外編（第二章後）</h1>
-<ul>
-<li><a
-href="https://ncode.syosetu.com/n9098ih/">【短編】「勇者と先輩」</a>
-<ul>
-<li>第21部分　第一部　第二章「九、青い部屋の猫」(2023/07/10)関連</li>
-</ul></li>
-<li><a
-href="https://ncode.syosetu.com/n9561ih/">【短編】「青い部屋の誓い（戦士桑田の泥臭い青春）」</a>
-<ul>
-<li>第22部分　第一部　第二章「一一、テカテカキラキラギラギラ」（2023/07/11）関連</li>
-</ul></li>
-</ul>
-<h1 id="第三章20230716">第三章（2023/07/16～）</h1>
-<ul>
-<li><a
-href="https://ncode.syosetu.com/n1100ih/24/">第一部　第三章　勇者一行
-一、召喚された異世界で鈴木は</a></li>
-</ul>
-<h2 id="第三章登場人物"><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">第三章登場人物</a></h2>
-<ul>
-<li>2023年 07月09日(日) 03時14分活動報告(/blogkey/3173819/))</li>
-</ul>
-<h2 id="あらすじ">あらすじ</h2>
-<ul>
-<li><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第三章のネタバレあらすじ</a>
-<ul>
-<li>2023年 07月22日(土) 13時20分活動報告(blogkey/3179219/)</li>
-</ul></li>
-</ul>
-<h2 id="用語-第三五章"><a
-href="https://mypage.syosetu.com/mypageblog/view/userid/1664945/blogkey/3173819/">用語　第三－五章</a></h2>
-<ul>
-<li>2023年 07月09日(日) 03時14分活動報告(blogkey/3173819/))</li>
-</ul>
-<h1 id="第四章20230726">第四章（2023/07/26～）</h1>
-<ul>
-<li><p><a
-href="https://ncode.syosetu.com/n1100ih/35/">第一部　第四章　美　一、美青年高橋、白い部屋のタスクに勤しむ</a></p></li>
-<li><p><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3182246/">第四章のネタバレあらすじ</a></p>
-<ul>
-<li>2023年 07月30日(日) 00時20分 活動報告(blogkey/3182246/)</li>
-</ul></li>
-<li><h2 id="第四章登場人物"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3179219/">第四章登場人物</a></h2></li>
-<li><p>2023年 07月22日(土) 13時20分活動報告（blogkey/3179219/）</p></li>
-</ul>
-<h1 id="番外編第五章前">番外編（第五章前）</h1>
-<ul>
-<li><a href="https://ncode.syosetu.com/n6605ii/">【連載】「谷間の白き華の艶やかなる響き～王国のおバカさん」</a></li>
-<li>2023年 07月31日 17時00分</li>
-</ul>
-<h1 id="第五章20230801">第五章（2023/08/01～）</h1>
-<ul>
-<li><a
-href="https://ncode.syosetu.com/n1100ih/44/">第一部　第五章　王国の貴族
-一、レディ・ドロテアのサロンにて</a></li>
-<li><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3184942/">第五章のネタバレあらすじ</a>
-<ul>
-<li>2023年 08月05日(土) 18時36分 活動報告(blogkey/3184942/)</li>
-</ul></li>
-</ul>
-<h2 id="第五章登場人物用語"><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3182246/">第五章登場人物・用語</a></h2>
-<ul>
-<li>2023年 07月30日(日) 00時20分 活動報告(blogkey/3182246/)</li>
-</ul>
-<h1 id="第六章20230807-更新中">第六章（2023/08/07～ 更新中）</h1>
-<ul>
-<li><a href="https://ncode.syosetu.com/n1100ih/53/">第一部　第六章　家族
-一、夕暮れ</a></li>
-<li><a
-href="https://syosetu.com/userblogmanage/view/blogkey/3184942/">第五章までの用語</a>
-<ul>
-<li>2023年 08月05日(土) 18時36分 活動報告(blogkey/3184942/)</li>
-</ul></li>
-</ul>
-<h1 id="第五章以降の話数など予定">第五章以降の話数など予定</h1>
-<ul>
-<li>第五章9話、第六話5話</li>
-<li>8月12日完結予定です。</li>
-</ul>
-<!--\N100IH\page1230729.md-->
-</div></body>
+<!--C:\Dropbox\Markdown\GitHub230811\23081-newIndex.md-->
+
+</body>
 </html>
