--- a/n1100ih.html
+++ b/n1100ih.html
@@ -1,3 +1,4 @@
+「わきまえ女子大生戦士は同級生勇者とかぼちゃを食べる～尽くし続けた私を理不尽な罠にはめたのは初恋の彼でした。尊敬しあえる仲間と共闘して溺愛され、家族になります」</title>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head>
@@ -18,7 +19,8 @@
 <p style="text-align:right;">
 2023-08-12更新
 </p>
-<h1 id="あらすじなど活動報告一覧">あらすじなど活動報告一覧</h1>
+<h1 id="あらすじなど活動報告一覧">「わきまえ女子大生戦士は同級生勇者とかぼちゃを食べる～尽くし続けた私を理不尽な罠にはめたのは初恋の彼でした。尊敬しあえる仲間と共闘して溺愛され、家族になります」
+あらすじなど活動報告一覧</h1>
 <ul>
 <li><a
 href="https://syosetu.com/userblogmanage/view/blogkey/3168898">第一章のネタバレあらすじ</a></li>
